# house-price-prediction-ml

./: .gitignore  LICENSE  README.md  hose-price.ipynb  main.py  pyproject.toml
models/: xgb_house_price_model.joblib
